@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.UncheckedIOException;
 import java.time.Duration;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -30,11 +29,14 @@ import java.util.concurrent.atomic.AtomicLong;
 
 import io.helidon.common.LazyValue;
 import io.helidon.common.buffers.BufferData;
+import io.helidon.common.buffers.CompositeBufferData;
 import io.helidon.common.socket.HelidonSocket;
+import io.helidon.grpc.core.GrpcHeadersUtil;
 import io.helidon.http.Header;
 import io.helidon.http.HeaderNames;
 import io.helidon.http.HeaderValues;
 import io.helidon.http.WritableHeaders;
+import io.helidon.http.http2.Http2FrameData;
 import io.helidon.http.http2.Http2Headers;
 import io.helidon.http.http2.Http2Settings;
 import io.helidon.http.http2.Http2StreamState;
@@ -52,9 +54,11 @@ import io.helidon.webclient.api.DnsAddressLookup;
 import io.helidon.webclient.api.Proxy;
 import io.helidon.webclient.api.TcpClientConnection;
 import io.helidon.webclient.api.WebClient;
+import io.helidon.webclient.http2.Http2Client;
 import io.helidon.webclient.http2.Http2ClientConnection;
 import io.helidon.webclient.http2.Http2ClientImpl;
 import io.helidon.webclient.http2.Http2StreamConfig;
+import io.helidon.webclient.http2.StreamTimeoutException;
 
 import io.grpc.CallOptions;
 import io.grpc.ClientCall;
@@ -63,6 +67,8 @@ import io.grpc.MethodDescriptor;
 
 import static io.helidon.metrics.api.Meter.Scope.VENDOR;
 import static java.lang.System.Logger.Level.DEBUG;
+import static java.lang.System.Logger.Level.ERROR;
+import static java.lang.System.Logger.Level.TRACE;
 
 /**
  * Base class for gRPC client calls.
@@ -77,7 +83,6 @@ abstract class GrpcBaseClientCall<ReqT, ResT> extends ClientCall<ReqT, ResT> {
     protected static final BufferData PING_FRAME = BufferData.create("PING");
     protected static final BufferData EMPTY_BUFFER_DATA = BufferData.empty();
     protected static final int DATA_PREFIX_LENGTH = 5;
-
     protected static final Tag OK_TAG = Tag.create("grpc.status", "OK");
     protected record MethodMetrics(Counter callStarted,
                                    Timer callDuration,
@@ -175,17 +180,75 @@ abstract class GrpcBaseClientCall<ReqT, ResT> extends ClientCall<ReqT, ResT> {
         startStreamingThreads();
 
         // send HEADERS frame
-        WritableHeaders<?> headers = WritableHeaders.create();
-        headers.add(Http2Headers.AUTHORITY_NAME, clientUri.authority());
-        headers.add(Http2Headers.METHOD_NAME, "POST");
-        headers.add(Http2Headers.PATH_NAME, "/" + methodDescriptor.getFullMethodName());
-        headers.add(Http2Headers.SCHEME_NAME, "http");
-        headers.add(GRPC_CONTENT_TYPE);
-        headers.add(GRPC_ACCEPT_ENCODING);
+        WritableHeaders<?> headers = setupHeaders(metadata, clientUri.authority(), methodDescriptor.getFullMethodName());
         clientStream.writeHeaders(Http2Headers.create(headers), false);
     }
 
+    static WritableHeaders<?> setupHeaders(Metadata metadata, String authority, String methodName) {
+        WritableHeaders<?> headers = WritableHeaders.create();
+        GrpcHeadersUtil.updateHeaders(headers, metadata);
+        headers.set(Http2Headers.AUTHORITY_NAME, authority);
+        headers.set(Http2Headers.METHOD_NAME, "POST");
+        headers.set(Http2Headers.PATH_NAME, "/" + methodName);
+        headers.set(Http2Headers.SCHEME_NAME, "http");
+        headers.set(GRPC_CONTENT_TYPE);
+        headers.set(GRPC_ACCEPT_ENCODING);
+        return headers;
+    }
+
     abstract void startStreamingThreads();
+
+    /**
+     * Read a single gRPC frame, possibly assembled from multiple HTTP/2 frames.
+     *
+     * @return data for gRPC frame or {@code null}
+     */
+    protected BufferData readGrpcFrame() {
+        // attempt to read HTTP/2 frame
+        Http2FrameData frameData;
+        try {
+            frameData = clientStream.readOne(pollWaitTime());
+        } catch (StreamTimeoutException e) {
+            handleStreamTimeout(e);
+            return null;
+        }
+        if (frameData == null) {
+            return null;
+        }
+
+        // read more HTTP/2 frames if long gRPC frame
+        BufferData bufferData = frameData.data();
+        bufferData.read();                                      // skip compression
+        long grpcLength = bufferData.readUnsignedInt32();       // length prefixed
+        grpcLength -= bufferData.available();
+
+        if (grpcLength > 0) {
+            // collect frames in composite buffer
+            CompositeBufferData compositeBuffer = BufferData.createComposite(bufferData);
+            do {
+                try {
+                    frameData = clientStream.readOne(pollWaitTime());
+                } catch (StreamTimeoutException e) {
+                    handleStreamTimeout(e);
+                    continue;
+                }
+                if (frameData == null) {
+                    continue;
+                }
+
+                bufferData = frameData.data();
+                compositeBuffer.add(bufferData);
+                grpcLength -= bufferData.available();
+            } while (grpcLength > 0);
+
+            // switch to composite buffer
+            bufferData = compositeBuffer;
+        }
+
+        // rewind and return
+        bufferData.rewind();
+        return bufferData;
+    }
 
     /**
      * Unary blocking calls that use stubs provide their own executor which needs
@@ -212,18 +275,17 @@ abstract class GrpcBaseClientCall<ReqT, ResT> extends ClientCall<ReqT, ResT> {
     protected ClientConnection clientConnection(ClientUri clientUri) {
         WebClient webClient = grpcClient.webClient();
         GrpcClientConfig clientConfig = grpcClient.prototype();
-        ConnectionKey connectionKey = new ConnectionKey(
+        ConnectionKey connectionKey = ConnectionKey.create(
                 clientUri.scheme(),
                 clientUri.host(),
                 clientUri.port(),
-                clientConfig.readTimeout().orElse(Duration.ZERO),
                 clientConfig.tls(),
                 DefaultDnsResolver.create(),
                 DnsAddressLookup.defaultLookup(),
                 Proxy.noProxy());
         return TcpClientConnection.create(webClient,
                                           connectionKey,
-                                          Collections.emptyList(),
+                                          List.of(Http2Client.PROTOCOL_ID),
                                           connection -> false,
                                           connection -> {
                                           }).connect();
@@ -317,6 +379,14 @@ abstract class GrpcBaseClientCall<ReqT, ResT> extends ClientCall<ReqT, ResT> {
     private ClientUri nextClientUri() {
         return clientUriSupplier == null ? grpcClient.prototype().baseUri().orElseThrow()
                 : clientUriSupplier.next();
+    }
+
+    protected void handleStreamTimeout(StreamTimeoutException e) {
+        if (abortPollTimeExpired()) {
+            socket().log(LOGGER, ERROR, "[Reading thread] HTTP/2 stream timeout, aborting");
+            throw e;
+        }
+        socket().log(LOGGER, TRACE, "[Reading thread] HTTP/2 stream timeout, retrying");
     }
 
     protected void initMetrics() {
